# beam-cuda-miner

./: .travis.yml  CMakeLists.txt  Equihash150_5.cu  Equihash150_5.h  README.md  appveyor.yml  beamStratum.cpp  cudaHost.cu  cudaHost.h  main.cpp
